[gd_scene load_steps=3 format=3]

[ext_resource type="Script" path="res://scripts/roof.gd" id="1_roof"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_roof"]
size = Vector2(300, 40)

[node name="Roof" type="Node2D" groups=["roof"]]
script = ExtResource("1_roof")

[node name="BuildingBody" type="ColorRect" parent="."]
offset_top = 20.0
offset_right = 300.0
offset_bottom = 400.0
color = Color(0.25, 0.22, 0.3, 1)

[node name="RoofRect" type="ColorRect" parent="."]
offset_right = 300.0
offset_bottom = 25.0
color = Color(0.35, 0.3, 0.38, 1)

[node name="RoofTop" type="ColorRect" parent="."]
offset_top = -8.0
offset_right = 300.0
offset_bottom = 5.0
color = Color(0.4, 0.35, 0.42, 1)

[node name="Snow" type="ColorRect" parent="."]
offset_top = -12.0
offset_right = 300.0
offset_bottom = -5.0
color = Color(0.92, 0.95, 1, 1)

[node name="StaticBody2D" type="StaticBody2D" parent="." groups=["roof"]]
collision_layer = 1
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(150, 20)
shape = SubResource("RectangleShape2D_roof")

[node name="ChimneyContainer" type="Node2D" parent="."]

[node name="ObstacleContainer" type="Node2D" parent="."]
